Fixing background repeat on iphone

--- a/css/frontResponsive.css
+++ b/css/frontResponsive.css
@@ -27,6 +27,6 @@
 	}
 
 	#frontBboy, #frontDeveloper{
-		background-size: auto 100%;
+		background-size: 100% 100%;
 	}
 }
